--- a/Favorites.html
+++ b/Favorites.html
@@ -5,8 +5,14 @@
     <title>Favorites</title>
     <style type="text/css">
     body {
+        margin:0px;
         background-image: url("favoriteback.jpg");
-        color:rgb(97, 42, 3)
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
     }
 
     h1 {
@@ -24,20 +30,100 @@
         font-size: 105%;
         font-style: Helvetica;
     }
+
+    .topnav {
+    overflow: hidden;
+    background-color:#333;
+  }
+
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 16px 16px;
+    text-decoration: none;
+    font-size: 16px;
+  }
+
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: #f2f2f2;
+    padding: 16px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+
+  .topnav a:hover, .dropdown:hover .dropbtn {
+    background-color:darkcyan;
+    color: black;
+  }
+
+  .topnav a.active {
+    background-color: #ddd;
+    color:black;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .contact{
+      float:right;
+  }
     </style>
     </head>
 
     <body>
-        <h1>Мои омилени активности</h1>    
+        <div class="topnav">
+            <a href="Home.html">Home</a>
+            <div class="dropdown" >
+              <button  class="dropbtn" >Favourites 
+              </button>
+              <div class="dropdown-content">
+                <a href="Music.html">Music</a>
+                <a href="TV Shows.html">TV Shows and Movies</a>
+              </div>
+            </div>
+            <a href="Gallery.html">Gallery</a>
+            <a href="Poll.html">Poll</a>
+            <div class="contact">
+            <a href="Contact.html">Contact</a>
+          </div>
+          </div>
+
+        <h1 style="margin: 10px;">Мои омилени активности</h1>    
     <ul>
         <li class = "glavno">Музика</li>
-        <p>Отсекогаш сум бил голем љубител на музика во мојот живот. Секогаш сум бил способен да се прилагодам
-           на средината околу мене и сум немал проблем со никаков тип на музика, но во сопствено време најмногу 
-           уживам при слушање на хип хоп и рок. Имам голем број на артисти кои ги слушам, како Kendrick Lamar, J Cole,
-           Young Thug, Drake, Kanye West, Lil Nas и многу други. Доколку сте заинтересирани да ја чуете музиката која ја слушам,
-           можете да кликните <a href = "https://open.spotify.com/playlist/04mpO0bwWklYwbrrnF2zPA" target = "_blank"> овде</a> и ќе ве одведе
-           до мојата Spotify плејлиста од песни.
-        </p>
+        
         <li class = "glavno">Филмови и ТВ серии</li>
         <p>Во моето слободно време јас многу сакам да гледам филмови и серии. Секогаш ги следам сите нови излегувања и може да 
            се наречам штребер на тема филмови и серии хаха. Повеќе преферирам да гледам серии, бидејќи повеќе се приврзувам со
